fix(style): udpdate spacing for the burger menu icon

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 nav {
 	padding: 1.5em;
 	padding-left: 1.5em;
-	padding-right: 1.5em;
+	padding-right: 0.2em;
 	height: 2.5em;
 	display: flex;
 	align-items: center;
@@ -28,7 +28,7 @@ nav {
 }
 
 .logo svg {
-	width: 8.5em;
+	width: 7.5em;
 	height: auto;
 	margin-right: 0.4em;
 	margin-bottom: 0.1em;
@@ -51,7 +51,7 @@ nav {
 }
 
 .help-center {
-	font-size: 1.5em;
+	font-size: 1.2em;
 	padding-left: 0.4em;
 	border-left: 2px solid white;
 	font-weight: 300;
